# cargo-shed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  explain.rs  fix.rs  issue.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  project.rs  report.rs  rules.rs  scan.rs
tests/: cli_smoke.rs  fix_snapshots.rs  fixtures.rs  lockfile_rules.rs  manifest_rules.rs  report_snapshots.rs  rules.rs
tests/snapshots/: report_snapshots__human_report.snap  report_snapshots__json_report.snap
