[package]
name = "cargo-shed"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Cargo subcommand that finds dependency bloat, risky features, duplicate crate versions, and safe cleanup opportunities in Rust projects."
license = "MIT OR Apache-2.0"
repository = "https://github.com/moooossee/cargo-shed"
readme = "README.md"
keywords = ["cargo", "dependencies", "cli", "rust", "lint"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
include = [
  "/src",
  "/tests",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
]

[lib]
name = "cargo_shed"
path = "src/lib.rs"

[[bin]]
name = "cargo-shed"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
colored = "2"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "1"
toml_edit = "0.22"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
